--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,8 @@
 @import "banner_rotativo";
 @import "promocoes";
 @import "noticias";
+@import "podcasts";
+@import "player";
 //auxiliares
 @import "auxiliares";
 @import "background";
