--- a/src/scss/_carrossel.scss
+++ b/src/scss/_carrossel.scss
@@ -12,6 +12,7 @@
     overflow-x: scroll;
     overflow-y: hidden;
     padding: 0 20px;
+    scrollbar-width: none;
 }
 
 .carrossel .carrossel-items::-webkit-scrollbar {
