--- a/src/scss/_noticias.scss
+++ b/src/scss/_noticias.scss
@@ -3,7 +3,9 @@
     background-image: url('../images/BACKGROUND-cabeçalhos.png');
     background-repeat: no-repeat;
     background-position: top;
-    min-height: 600px;
+    //min-height: 600px;
+    overflow: hidden;
+    margin-bottom: 40px;
 }
 
 .section.noticias .content {
@@ -19,13 +21,13 @@
     margin-top: -100px;
 }
 
-.logo-section .titulo {
+.noticias .logo-section .titulo {
     position: absolute;
     top: 0;
     width: 100%;
 }
 
-.logo-section .titulo h1 {
+.noticias .logo-section .titulo h1 {
     font-size: 48px;
     font-style: italic;
     font-weight: 900;
@@ -74,10 +76,22 @@
     overflow: hidden;
 }
 
+.grid-noticias .post-item.featured h3 {
+    font-size: 24px;
+    line-height: 30px;
+}
+
+.grid-noticias .post-item h3 {
+    font-size: 14px;
+    line-height: 16px;
+    white-space: normal;
+}
+
 @media screen and (max-width: 767px) {
     .grid-noticias {
         display: flex;
         flex-direction: row;
+        margin: 10px 0;
     }
     .featured-posts {
         width: auto;
@@ -87,6 +101,19 @@
         padding-left: 10px;
         padding-right: 10px;
         margin-top: 0;
+        scrollbar-color: $mfm-amarelo $mfm-roxo !important;
+        scrollbar-width: thin !important;
+    }
+    .featured-posts::-webkit-scrollbar {
+        width: 5px;
+        height: 10px;
+    }
+    .featured-posts::-webkit-scrollbar-thumb {
+        -webkit-border-radius: 10px;
+        border-radius: 10px;
+        background: $mfm-amarelo;
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
     }
     .featured-posts .grid-noticias .post-item.featured {
         height: 142px;
@@ -97,7 +124,14 @@
     }
     .featured-posts .grid-noticias .post-item {
         width: 240px;
-        margin-right: 8px;
         height: 142px;
+        margin-bottom: 0;
+    }
+    .featured-posts .grid-noticias .post-item:not(:last-of-type) {
+        margin-right: 8px;
+    }
+    .grid-noticias .post-item.featured h3 {
+        font-size: 14px;
+        line-height: 16px;
     }
 }
