--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,7 +3,7 @@ $mfm-laranja: #e8b200;
 $mfm-magenta: #b50091;
 $mfm-roxo: #6318af;
 $mfm-cinza: #606060;
-$mfm-cinza-claro: #cccccc;
+$mfm-cinza-claro: #E6E6E6;
 $white:#ffffff;
 $black:#000000;
 $twitter-color: #4099ff;
