--- a/src/scss/_gerais.scss
+++ b/src/scss/_gerais.scss
@@ -37,6 +37,10 @@ header {
     position: relative;
 }
 
+.hide {
+    display: none !important;
+}
+
 .box {
     display: block;
     position: relative;
@@ -154,6 +158,31 @@ header {
     -o-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, .5), 0px 3px 1px -2px rgba(0, 0, 0, .5), 0px 1px 5px 0px rgba(0, 0, 0, .4);
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, .5), 0px 3px 1px -2px rgba(0, 0, 0, .5), 0px 1px 5px 0px rgba(0, 0, 0, .4);
     color: $white;
+}
+
+.btn-outline {
+    color: $mfm-roxo;
+    font-size: 10px;
+    font-weight: 700;
+    padding: 5px 15px;
+    border: 1px solid $mfm-magenta;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -ms-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+    border-radius: 15px;
+}
+
+.btn-outline:hover {
+    color: $white;
+    background: $mfm-roxo linear-gradient(90deg, $mfm-roxo, $mfm-magenta) repeat-x;
+    // -webkit-transition: all .3s ease-in-out;
+    // -moz-transition: all .3s ease-in-out;
+    // -ms-transition: all .3s ease-in-out;
+    // -o-transition: all .3s ease-in-out;
+    // transition: all .3s ease-in-out;
+    // border-radius: 15px;
 }
 
 .border-gradient {
