--- a/src/scss/_podcasts.scss
+++ b/src/scss/_podcasts.scss
@@ -8,7 +8,6 @@
     background-position: bottom -50px right -50px;
     min-height: 600px;
     overflow: hidden;
-    margin-bottom: 40px;
 }
 
 .section.noticias .content {
@@ -216,6 +215,7 @@
     -ms-box-shadow: 0px 0px 6px rgba(0, 0, 0, .5) inset;
     -o-box-shadow: 0px 0px 6px rgba(0, 0, 0, .5) inset;
     box-shadow: 0px 0px 6px rgba(0, 0, 0, .5) inset;
+    border-bottom-right-radius: 10px;
     grid-area: lista;
     overflow-x: hidden;
     overflow-y: scroll;
@@ -291,6 +291,7 @@
     }
     .podcast-list {
         margin-left: 10px;
+        border-bottom-left-radius: 10px;
     }
     .podcast-list ul li {
         flex-wrap: wrap-reverse;
